--- a/Classifying Names with a Character-Level RNN.ipynb
+++ b/Classifying Names with a Character-Level RNN.ipynb
@@ -675,24 +675,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\n",
-      "Columns 0 to 12 \n",
-      "    0     0     0     0     0     0     0     0     0     0     0     0     0\n",
-      "\n",
-      "Columns 13 to 25 \n",
-      "    0     0     0     0     0     0     0     0     0     0     0     0     0\n",
-      "\n",
-      "Columns 26 to 38 \n",
-      "    0     0     0     0     0     0     0     0     0     1     0     0     0\n",
-      "\n",
-      "Columns 39 to 51 \n",
-      "    0     0     0     0     0     0     0     0     0     0     0     0     0\n",
-      "\n",
-      "Columns 52 to 56 \n",
-      "    0     0     0     0     0\n",
-      "[torch.FloatTensor of size 1x57]\n",
-      "\n",
+      "tensor([[ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+      "          0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+      "          0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  1.,\n",
+      "          0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+      "          0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.]])\n",
       "torch.Size([5, 1, 57])\n"
      ]
     }
@@ -725,14 +712,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +761,7 @@
        "57"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -785,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +781,7 @@
        "18"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -805,22 +792,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Variable containing:\n",
-      "\n",
-      "Columns 0 to 9 \n",
-      "-2.8980 -3.0456 -2.8910 -2.8496 -2.8043 -2.9891 -2.9457 -2.8158 -2.8486 -2.8312\n",
-      "\n",
-      "Columns 10 to 17 \n",
-      "-2.9021 -2.8805 -2.8748 -2.8604 -2.8268 -2.9190 -2.9150 -2.9632\n",
-      "[torch.FloatTensor of size 1x18]\n",
-      "\n"
+      "tensor([[-2.8359, -2.9183, -2.7858, -2.8683, -2.8951, -2.9869, -2.8819,\n",
+      "         -2.8700, -2.9283, -2.9163, -2.9253, -2.9432, -2.8717, -2.9386,\n",
+      "         -2.9041, -2.8238, -2.8996, -2.8536]])\n"
      ]
     }
    ],
@@ -834,23 +815,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "category = Scottish / line = Cunningham\n",
-      "category = Korean / line = Rheem\n",
-      "category = French / line = Boucher\n",
-      "category = Spanish / line = Rodriguez\n",
-      "category = Italian / line = Franzese\n",
-      "category = Portuguese / line = Araullo\n",
-      "category = Korean / line = Choi\n",
-      "category = German / line = Worner\n",
-      "category = Japanese / line = Minatoya\n",
-      "category = English / line = Blackwell\n"
+      "category = Spanish / line = Elizondo\n",
+      "category = Japanese / line = Nishimoto\n",
+      "category = Spanish / line = Obando\n",
+      "category = Dutch / line = Althuis\n",
+      "category = Arabic / line = Sarraf\n",
+      "category = Spanish / line = Busto\n",
+      "category = Italian / line = Sordi\n",
+      "category = Spanish / line = Arce\n",
+      "category = Russian / line = Binevich\n",
+      "category = Chinese / line = Hong\n"
      ]
     }
    ],
@@ -874,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -897,6 +878,10 @@
     "    for i in range(line_tensor.size()[0]):\n",
     "        output, hidden = rnn(line_tensor[i], hidden)\n",
     "\n",
+    "    print(output)\n",
+    "    print(output.size())\n",
+    "    print(category_tensor)\n",
+    "    print(category_tensor.size())\n",
     "    loss = criterion(output, category_tensor)\n",
     "    loss.backward()\n",
     "\n",
@@ -909,33 +894,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5000 5% (0m 3s) 2.7563 Rademakers / Greek ✗ (Dutch)\n",
-      "10000 10% (0m 7s) 3.7581 Hay / Chinese ✗ (Scottish)\n",
-      "15000 15% (0m 11s) 1.9887 Favre / French ✓\n",
-      "20000 20% (0m 14s) 1.2311 Srour / Arabic ✓\n",
-      "25000 25% (0m 18s) 0.4511 Snyders / Dutch ✓\n",
-      "30000 30% (0m 22s) 1.2200 Mckay / Scottish ✓\n",
-      "35000 35% (0m 25s) 1.3520 Janick / Czech ✓\n",
-      "40000 40% (0m 29s) 2.5827 Flynn / Scottish ✗ (Irish)\n",
-      "45000 45% (0m 33s) 2.6357 Stamp / Arabic ✗ (English)\n",
-      "50000 50% (0m 36s) 1.3493 Yun / Chinese ✗ (Korean)\n",
-      "55000 55% (0m 40s) 2.7112 Prill / English ✗ (Czech)\n",
-      "60000 60% (0m 44s) 2.2078 Said / Korean ✗ (Arabic)\n",
-      "65000 65% (0m 47s) 3.4021 StrakaO / Arabic ✗ (Czech)\n",
-      "70000 70% (0m 51s) 2.5285 Hall / Scottish ✗ (German)\n",
-      "75000 75% (0m 55s) 2.2128 Hase / Japanese ✗ (German)\n",
-      "80000 80% (0m 58s) 0.4362 Henriques / Portuguese ✓\n",
-      "85000 85% (1m 2s) 0.0656 Cathain / Irish ✓\n",
-      "90000 90% (1m 6s) 0.7203 D'cruze / Portuguese ✓\n",
-      "95000 95% (1m 9s) 2.6893 Wizner / Polish ✗ (Czech)\n",
-      "100000 100% (1m 13s) 2.4736 Bell / German ✗ (Scottish)\n"
+      "tensor([[-4.2613, -4.2731, -7.0222, -6.4710, -6.6671, -8.4939, -2.8248,\n",
+      "         -1.7289, -3.9250, -2.9994, -5.0146, -3.1225, -3.7795, -7.4290,\n",
+      "         -0.5509, -4.8784, -6.7022, -6.0821]])\n",
+      "torch.Size([1, 18])\n",
+      "tensor([ 0])\n",
+      "torch.Size([1])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:22: UserWarning: invalid index of a 0-dim tensor. This will be an error in PyTorch 0.5. Use tensor.item() to convert a 0-dim tensor to a Python number\n"
      ]
     }
    ],
@@ -943,7 +921,7 @@
     "import time\n",
     "import math\n",
     "\n",
-    "n_iters = 100000\n",
+    "n_iters = 1\n",
     "print_every = 5000\n",
     "plot_every = 1000\n",
     "\n",
@@ -967,6 +945,7 @@
     "    output, loss = train(category_tensor, line_tensor)\n",
     "    current_loss += loss\n",
     "\n",
+    "   \n",
     "    # Print iter number, loss, name and guess\n",
     "    if iter % print_every == 0:\n",
     "        guess, guess_i = categoryFromOutput(output)\n",
@@ -976,7 +955,8 @@
     "    # Add current loss avg to list of losses\n",
     "    if iter % plot_every == 0:\n",
     "        all_losses.append(current_loss / plot_every)\n",
-    "        current_loss = 0"
+    "        current_loss = 0\n",
+    "        "
    ]
   },
   {
@@ -989,6 +969,32 @@
     "    top_n, top_i = output.data.topk(1) # Tensor out of Variable with .data\n",
     "    category_i = top_i[0][0]\n",
     "    return all_categories[category_i], category_i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = torch.tensor([1],dtype=torch.int32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([ 1], dtype=torch.int32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (a)"
    ]
   },
   {
