--- a/Deep_learning_with_Pytorch-1.ipynb
+++ b/Deep_learning_with_Pytorch-1.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "My attempt at providing a beginner's tutorial on pytorch. Unlike the ones in the internet or Pytorch website, we start with very basic ideas of tensor (the primary datatype) and go through designing simple feed forward networks with Pytorch. The tutorial requires only basic understanding of feed-forward network. When I was learning Pytorch I found out that almost all the tutorials started with RNNs, CNNs. For someone who had just started with deep learning, it was really difficlut to comprehend. I think, a tutorial should start from the very basics, getting familiar with the different modules in Pytorch and then taking the first step towards designing very simple feed-forward neural networks. Hence my motivation to create a tutorial like this. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Pytorch installation"
    ]
   },
@@ -309,7 +316,7 @@
    "outputs": [],
    "source": [
     "# Check these out yourself....\n",
-    "# Other useful functions torch.squeeze(), torch.unsqueeze(), "
+    "# Other useful functions torch.squeeze(), torch.unsqueeze(), torch.detach()...."
    ]
   },
   {
@@ -321,11 +328,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Now that we know how to create and manipulate tensors, we move onto the second part which is calculating gradients"
+    "# Now that we know how to create and manipulate tensors, we move onto the second part which is calculating gradients\n",
+    "# You donot need to calculate gradients from scratch..\n",
+    "# Autograd module in Pytorch does it for you"
    ]
   },
   {
